# the-notion-cookbook-bot

./: README.md  pyproject.toml  requirements.txt
docs/: CNAME  index.html
docs/static/: styles.css  tags.css
notion_cookbook/: __init__.py  notion_cookbook.py  server_health.py
notion_cookbook/api/: cuisine.py  helpers.py  ingredient.py  recipe.py  recipe_handler.py
notion_cookbook/static/: classes.css
notion_cookbook/templates/: error.html  index.html  loading.html
