[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notion_cookbook"
version = "1.0.0"
description = "An automated service that helps with recipe collection and handling within notion."
requires-python = ">=3.11.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "Flask~=3.1.0",
    "flask_restx~=1.3.0",
    "jsonschema",
    "marshmallow",
    "psutil",
    "python-dotenv",
    "python_box==7.2.0",
    "requests"
]

[project.urls]
"Homepage" = "https://www.mihir-modak.com"
"Bug Tracker" = "https://www.mihir-modak.com"

[tools.setuptools]
include-package-data = true

[tools.setuptools.packages]
find={}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]